Init partials and structure

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,7 @@
-<h1>Index</h1>
+<div class="bucket">
+  <h1>A home for your characters</h1>
+  <p>
+    All in one place, with freedom to choose categories, create relation webs
+    and group characters by project.
+  </p>
+</div>
