Add content to index template

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,54 @@
-<div class="bucket">
-  <h1>A home for your characters</h1>
-  <p>
-    All in one place, with freedom to choose categories, create relation webs
-    and group characters by project.
-  </p>
+<div class="grid">
+  <div class="head-item">
+    <h1>A home for your characters</h1>
+    <p>
+      All in one place, with freedom to choose categories, create relation webs
+      and group characters by project.
+    </p>
+  </div>
+
+  <div>
+    <h3>Custom tabs</h3>
+    <p>
+      You have the freedom to decide what notes you need to make on your
+      characters. We'll start you off with some basic prequisites; from there,
+      the headings are yours to create. If you really hate ours, you can even
+      delete those too.
+    </p>
+  </div>
+  <div>
+    <h3>Relation webs</h3>
+    <p>
+      Got a complex family tree? Want to keep track of character interactions?
+      Create a relation web using colour codes or simply notes.
+    </p>
+  </div>
+  <div>
+    <h3>Linked playlists</h3>
+    <p>
+      We believe creating a playlist can help bring a character to life. Link
+      your playlist in the database to easily open and edit it when you're hit
+      with inspiration. If you're not familiar with linking characters to music,
+      head to the articles for ideas on how to create one.
+    </p>
+  </div>
+  <div>
+    <h3>Group by project</h3>
+    <p>
+      Colour code your characters by project, whether that be a story or a game.
+      Or note the project in the tab and sort.
+    </p>
+  </div>
+
+  <div class="article-item">
+    <h3>Articles</h3>
+    <div>
+      <img src="/img/art-ph.jpg" alt="blog placeholder image" height="300" />
+    </div>
+    <p>
+      Need help getting started? Want guidance on playlists? Don't know how else
+      to flesh your characters out? Our articles are there to help you with all
+      of these and more.
+    </p>
+  </div>
 </div>
