--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,5 +2,9 @@
 <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">CharDev</a>
+    <div class="nav-item">
+      <a class="nav-link active" aria-current="page" href="/account">Login</a>
+    </div>
   </div>
+</nav>
 </nav>
