Add log/sign auth routes(jwt) and mware

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,5 @@
+<h1>The home of characters</h1>
+
 <!-- form for sign up, login -->
 
 <form class="login-form" action="/login" method="post">
@@ -15,6 +17,7 @@
       placeholder="password"
     />
   </div>
+  <input type="submit" />
 </form>
 
 <p></p>
@@ -37,15 +40,5 @@
     <span class="form-text"> Must be 8-20 characters long. </span>
   </div>
 
-  <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label"
-      >Re-enter password</label
-    >
-    <input
-      name="repassword"
-      type="password"
-      class="form-control"
-      placeholder="password"
-    />
-  </div>
+  <input type="submit" />
 </form>
