--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -6,6 +6,7 @@ body {
   background-image: url("../img/texture.png");
 }
 
+h1,
 h2 {
   text-align: center;
 }
@@ -22,24 +23,14 @@ img {
   background-image: url("/img/texture.png");
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto;
-  gap: 5rem;
-  padding: 0rem 5rem;
-  margin: 20px 50px;
-}
-
-.article-item,
-.head-item {
-  grid-column: span 2;
-  text-align: center;
-}
-
 .login-form {
   display: flex;
   justify-content: center;
+}
+
+input[type="submit"] {
+  height: 80%;
+  align-self: center;
 }
 
 footer {
