Fix complete render after sign/login

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,8 +36,9 @@
       type="password"
       class="form-control"
       placeholder="password"
+      minlength="8"
     />
-    <span class="form-text"> Must be 8-20 characters long. </span>
+    <span class="form-text"> Must be at least 8 characters long. </span>
   </div>
 
   <input type="submit" />
