Refactor for single user (init)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,8 @@
   <input type="submit" />
 </form>
 
-<p></p>
+<!-- FOR EXPANSION TO MULTI USER -->
+<!-- <p></p>
 <h2>Don't have an account? Create one here</h2>
 
 <form class="login-form" action="/signup" method="post">
@@ -42,4 +43,4 @@
   </div>
 
   <input type="submit" />
-</form>
+</form> -->
