Setup overview post route

--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -1,10 +1,27 @@
 <h1>Characters</h1>
 
-<% if(data) { %> <% data.forEach(c => { %>
+<% if(locals.data) { %> <% data.forEach(c => { %>
 <a><h2><% c.name %></h2></a>
-
 <% }); %> <% } else { %>
-<p>form goes here</p>
+<p>You have no characters yet. Start developing your first one below.</p>
+<div class="init-form">
+  <form action="/init" method="post">
+    <label class="form-label">Name</label>
+    <input name="name" class="form-control" />
+    <label class="form-label">Age</label>
+    <input name="age" class="form-control" />
+    <label class="form-label">Personality</label>
+    <textarea name="personality" class="form-control"></textarea>
+    <label class="form-label">Appearance</label>
+    <textarea name="appearance" class="form-control"></textarea>
+    <label class="form-label">Relationships</label>
+    <textarea name="relationships" class="form-control"></textarea>
+    <label class="form-label">Notes</label>
+    <textarea name="notes" class="form-control"></textarea>
+    <br />
+    <input type="submit" />
+  </form>
+</div>
 <% } %>
 
 <!-- else display form for first character in db -->
