--- a/views/table.ejs
+++ b/views/table.ejs
@@ -1,1 +1,9 @@
 <!-- single character table -->
+<h1>This character</h1>
+
+<% if (locals.char) { %>
+<p>Character data success</p>
+<p>char.name</p>
+<% } else { %>
+<p>Error receiving character data</p>
+<% } %>
