--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -7,7 +7,8 @@ body {
 }
 
 h1,
-h2 {
+h2,
+p {
   text-align: center;
 }
 
@@ -26,6 +27,14 @@ img {
 .login-form {
   display: flex;
   justify-content: center;
+}
+
+textarea {
+  height: 300px;
+}
+
+.init-form {
+  padding: 50px 100px;
 }
 
 input[type="submit"] {
