Adjust auth methods and sessions work

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
 </form>
 
 <!-- FOR EXPANSION TO MULTI USER -->
-<!-- <p></p>
+<p></p>
 <h2>Don't have an account? Create one here</h2>
 
 <form class="login-form" action="/signup" method="post">
@@ -43,4 +43,4 @@
   </div>
 
   <input type="submit" />
-</form> -->
+</form>
