Send data for user's selected char to table ejs

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -24,7 +24,8 @@ img {
   background-image: url("/img/texture.png");
 }
 
-.login-form {
+.login-form,
+.char-list {
   display: flex;
   justify-content: center;
 }
