--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -30,4 +30,47 @@
 </div>
 <% } %>
 
+<div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button
+        class="accordion-button collapsed"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#collapseThree"
+        aria-expanded="false"
+        aria-controls="collapseThree"
+      >
+        New character
+      </button>
+    </h2>
+    <div
+      id="collapseThree"
+      class="accordion-collapse collapse"
+      data-bs-parent="#accordionExample"
+    >
+      <div class="accordion-body">
+        <div class="init-form">
+          <form action="/init" method="post">
+            <label class="form-label">Name</label>
+            <input name="name" class="form-control" />
+            <label class="form-label">Age</label>
+            <input name="age" class="form-control" />
+            <label class="form-label">Personality</label>
+            <textarea name="personality" class="form-control"></textarea>
+            <label class="form-label">Appearance</label>
+            <textarea name="appearance" class="form-control"></textarea>
+            <label class="form-label">Relationships</label>
+            <textarea name="relationships" class="form-control"></textarea>
+            <label class="form-label">Notes</label>
+            <textarea name="notes" class="form-control"></textarea>
+            <br />
+            <input type="submit" />
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- else display form for first character in db -->
