Add logout route

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,8 @@
 <!-- As a link -->
+
 <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">CharDev</a>
+    <a class="navbar-brand">CharDev</a>
+    <a href="/logout" class="btn btn-outline-dark" role="button">Logout</a>
   </div>
 </nav>
