Correct table load with user id

--- a/views/table.ejs
+++ b/views/table.ejs
@@ -6,7 +6,7 @@
   <form class="test" action="/delete" method="post">
     <input type="hidden" name="_id" value="<%= char._id %>" />
     <input class="delete-button" type="submit" value="Delete Character" />
-    <p class="warning">Warning - This action cannot be undone.</p>
+    <p class="info">Warning - This action cannot be undone.</p>
   </form>
   <form action="/save" method="post">
     <label class="form-label">Name</label>
