--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -44,7 +44,7 @@
             <label class="form-label">Notes</label>
             <textarea name="notes" class="form-control"></textarea>
             <br />
-            <input type="submit" />
+            <input type="submit" value="Add character" />
           </form>
         </div>
       </div>
