--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -12,40 +12,84 @@ p {
   text-align: center;
 }
 
-div {
-  padding: 20px;
-}
-
 img {
   border-radius: 5px;
 }
 
-.navbar {
-  background-image: url("/img/texture.png");
-}
-
-.login-form {
-  display: flex;
-  justify-content: center;
-}
-
-.char-list {
+form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+h1 {
+  font-size: 56px;
+  text-shadow: 2px 2px #cbe2f1;
+}
+
+input[type="submit"] {
+  height: 80%;
+  align-self: center;
 }
 
 textarea {
   height: 300px;
 }
 
-.init-form {
-  padding: 50px 100px;
+.char-button {
+  border: none;
+  font-weight: 800;
 }
 
-input[type="submit"] {
-  height: 80%;
-  align-self: center;
+.navbar {
+  background-image: url("/img/texture.png");
+}
+
+.login-form,
+.signup-form {
+  display: flex;
+  justify-content: center;
+}
+
+.signup-box {
+  min-height: 50vh;
+  margin: 70px;
+  background-color: #cbe2f1;
+  border-radius: 50px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  display: flex;
+  padding: 20px;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.login-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.login-box form {
+  max-width: 70%;
+}
+
+.option-form {
+  align-items: center;
+  gap: 10px;
+}
+
+.char-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px 30%;
+  padding: 20px;
+  gap: 20px;
+}
+
+.init-form {
+  padding: 50px 100px;
 }
 
 .delete-button {
@@ -60,4 +104,5 @@ footer {
   align-self: center;
   margin-top: auto;
   text-align: center;
+  padding: 20px;
 }
