--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,60 +1,62 @@
-<h1>The home of characters</h1>
+<!-- FOR EXPANSION TO MULTI USER -->
+<h1 class="h1-main">Home of Characters</h1>
+<div class="signup-box">
+  <h2>Create an account here</h2>
+
+  <form class="signup-form" action="/signup" method="post">
+    <div class="mb-3">
+      <label for="s-username" class="form-label">Username</label>
+      <input
+        id="s-username"
+        name="username"
+        class="form-control"
+        placeholder="username"
+        autocomplete="off"
+      />
+    </div>
+
+    <div class="mb-3">
+      <label for="s-password" class="form-label">Password</label>
+      <input
+        id="s-password"
+        name="password"
+        type="password"
+        class="form-control"
+        placeholder="password"
+        minlength="8"
+      />
+      <span class="form-text"> Must be at least 8 characters long. </span>
+    </div>
+
+    <input type="submit" value="Create account" />
+  </form>
+</div>
 
 <!-- form for sign up, login -->
+<div class="login-box">
+  <h2>Already have an account? Sign in.</h2>
+  <form class="login-form" action="/login" method="post">
+    <div class="mb-3">
+      <label for="username" class="form-label">Username</label>
+      <input
+        id="username"
+        name="username"
+        class="form-control"
+        placeholder="username"
+        autocomplete="off"
+      />
+    </div>
 
-<form class="login-form" action="/login" method="post">
-  <div class="mb-3">
-    <label for="username" class="form-label">Username</label>
-    <input
-      id="username"
-      name="username"
-      class="form-control"
-      placeholder="username"
-      autocomplete="off"
-    />
-  </div>
-
-  <div class="mb-3">
-    <label for="password" class="form-label">Password</label>
-    <input
-      id="password"
-      name="password"
-      type="password"
-      class="form-control"
-      placeholder="password"
-    />
-  </div>
-  <input type="submit" />
-</form>
-
-<!-- FOR EXPANSION TO MULTI USER -->
-<p></p>
-<h2>Don't have an account? Create one here</h2>
-
-<form class="login-form" action="/signup" method="post">
-  <div class="mb-3">
-    <label for="s-username" class="form-label">Username</label>
-    <input
-      id="s-username"
-      name="username"
-      class="form-control"
-      placeholder="username"
-      autocomplete="off"
-    />
-  </div>
-
-  <div class="mb-3">
-    <label for="s-password" class="form-label">Password</label>
-    <input
-      id="s-password"
-      name="password"
-      type="password"
-      class="form-control"
-      placeholder="password"
-      minlength="8"
-    />
-    <span class="form-text"> Must be at least 8 characters long. </span>
-  </div>
-
-  <input type="submit" />
-</form>
+    <div class="mb-3">
+      <label for="password" class="form-label">Password</label>
+      <input
+        id="password"
+        name="password"
+        type="password"
+        class="form-control"
+        placeholder="password"
+      />
+    </div>
+    <input type="submit" value="Login" />
+  </form>
+</div>
