--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -40,17 +40,13 @@ textarea {
   font-weight: 800;
 }
 
-.navbar {
-  background-image: url("/img/texture.png");
-}
-
 .login-form,
 .signup-form {
   display: flex;
   justify-content: center;
 }
 
-.signup-box {
+.call-box {
   min-height: 50vh;
   margin: 70px;
   background-color: #cbe2f1;
@@ -62,16 +58,6 @@ textarea {
   padding: 20px;
   flex-direction: column;
   justify-content: center;
-}
-
-.login-box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.login-box form {
-  max-width: 70%;
 }
 
 .option-form {
