--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <!-- FOR EXPANSION TO MULTI USER -->
 <h1 class="h1-main">Home of Characters</h1>
-<div class="signup-box">
+<div class="call-box">
   <h2>Create an account here</h2>
 
   <form class="signup-form" action="/signup" method="post">
@@ -13,6 +13,9 @@
         placeholder="username"
         autocomplete="off"
       />
+      <% if(locals.message) { %>
+      <span class="form-text"><%= message %></span>
+      <% } %>
     </div>
 
     <div class="mb-3">
@@ -29,34 +32,5 @@
     </div>
 
     <input type="submit" value="Create account" />
-  </form>
-</div>
-
-<!-- form for sign up, login -->
-<div class="login-box">
-  <h2>Already have an account? Sign in.</h2>
-  <form class="login-form" action="/login" method="post">
-    <div class="mb-3">
-      <label for="username" class="form-label">Username</label>
-      <input
-        id="username"
-        name="username"
-        class="form-control"
-        placeholder="username"
-        autocomplete="off"
-      />
-    </div>
-
-    <div class="mb-3">
-      <label for="password" class="form-label">Password</label>
-      <input
-        id="password"
-        name="password"
-        type="password"
-        class="form-control"
-        placeholder="password"
-      />
-    </div>
-    <input type="submit" value="Login" />
   </form>
 </div>
