--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,7 +28,7 @@
     <title>CharDev</title>
   </head>
   <body>
-    <%- include('./partials/header.ejs') %> <%- body %> <%-
-    include('./partials/footer.ejs') %>
+    <%- include('./partials/header.ejs') %> <%- body %>
+    <%-include('./partials/footer.ejs') %>
   </body>
 </html>
