--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -59,7 +59,9 @@
   </form>
 </div>
 <% } else { %>
-<p>You have no characters yet. Start developing your first one below.</p>
+<p class="info2">
+  You have no characters yet. Start developing your first one below.
+</p>
 <div class="init-form">
   <form action="/init" method="post">
     <label class="form-label">Group</label>
