--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,9 +1,8 @@
 * {
   font-family: "Anybody", sans-serif;
-}
-
-body {
-  background-image: url("../img/texture.png");
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 h1,
@@ -13,27 +12,34 @@ h3 {
   padding: 10px;
 }
 
-img {
-  border-radius: 5px;
-}
-
 form {
   display: flex;
   flex-direction: column;
 }
 
-h1 {
-  font-size: 56px;
-  text-shadow: 2px 2px #cbe2f1;
+button {
+  background-color: #ffffff;
+  padding: 2px;
+  border-radius: 5px;
 }
 
 input[type="submit"] {
   height: 80%;
   align-self: center;
+  padding: 10px;
+  border-radius: 5px;
 }
 
 textarea {
   height: 300px;
+}
+
+nav {
+  width: 100%;
+}
+
+.delete-button {
+  background-color: #bd0808;
 }
 
 .char-button {
@@ -50,18 +56,14 @@ textarea {
 .signup-form {
   display: flex;
   justify-content: center;
+  width: 70%;
 }
 
 .call-box {
-  min-height: 50vh;
-  margin: 70px;
-  background-color: #cbe2f1;
-  border-radius: 50px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
-    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   display: flex;
-  padding: 20px;
+  padding: 50px;
+  margin: 50px;
+  align-items: center;
   flex-direction: column;
   justify-content: center;
 }
@@ -73,13 +75,12 @@ textarea {
 
 .char-list {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   grid-template-rows: auto;
-  margin: 50px;
+  margin: 0px 100px;
 }
 
 .char-list-item {
-  border: #cbe2f1 solid 2px;
   font-size: 20px;
   padding: 5px;
 }
@@ -88,12 +89,13 @@ textarea {
   padding: 50px 100px;
 }
 
-.delete-button {
-  background-color: #bd0808;
-}
-
 .info {
   display: inline-block;
+  text-align: center;
+}
+
+.info2 {
+  text-align: center;
 }
 
 footer {
