--- a/views/table.ejs
+++ b/views/table.ejs
@@ -22,7 +22,9 @@
       name="name"
       class="form-control"
       value="<%= char.name %>"
+      required
     />
+    <p>Field required</p>
     <label class="form-label">Age</label>
     <input
       autocomplete="off"
