--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "Anybody", sans-serif;
+  font-family: "DM sans", sans-serif;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -36,6 +36,10 @@ textarea {
 
 nav {
   width: 100%;
+}
+
+label {
+  font-weight: 700;
 }
 
 .delete-button {
@@ -103,4 +107,16 @@ footer {
   margin-top: auto;
   text-align: center;
   padding: 20px;
+}
+
+@media (max-width: 700px) {
+  .char-list {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+  }
+
+  * {
+    margin: 0;
+    padding: 0;
+  }
 }
