Add colour themes dropdown

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,8 +34,32 @@
           <a class="nav-link" href="/login">Login</a>
           <% } %>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Theme
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <button class="color-select dropdown-item" data-color="light">Light</button>
+            </li>
+            <li>
+              <button class="color-select dropdown-item" data-color="dark">Dark</button>
+            </li>
+            <li>
+              <button class="color-select dropdown-item" data-color="blue">Blue</button>
+            </li>
+            <li>
+              <button class="color-select dropdown-item" data-color="purple">Purple</button>
+            </li>
+            <li>
+              <button class="color-select dropdown-item" data-color="green">Green</button>
+            </li>
+            <li>
+              <button class="color-select dropdown-item" data-color="pink">Pink</button>
+            </li>
+          </ul>
+        </li>
       </ul>
     </div>
   </div>
 </nav>
-
