--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -120,3 +120,30 @@ footer {
     padding: 0;
   }
 }
+
+/* colour themes */
+
+.light {
+  background-color: #ffffff;
+}
+
+.dark {
+  color: #ffffff;
+  background-color: #303030;
+}
+
+.blue {
+  background-color: #a4d1db;
+}
+
+.purple {
+  background-color: #c18bf8;
+}
+
+.green {
+  background-color: #8cce8a;
+}
+
+.pink {
+  background-color: #efb8dc;
+}
