--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,6 @@
       <span class="form-text"> Must be at least 8 characters long. </span>
     </div>
 
-    <input type="submit" value="Create account" />
+    <button type="submit">Create account</button>
   </form>
 </div>
