--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -48,7 +48,7 @@
     <label class="form-label">Notes</label>
     <textarea name="notes" class="form-control"></textarea>
     <br />
-    <input type="submit" value="Add character" />
+    <button type="submit">Add character</button>
   </form>
 </div>
 <% } else { %>
@@ -73,7 +73,7 @@
     <label class="form-label">Notes</label>
     <textarea name="notes" class="form-control"></textarea>
     <br />
-    <input type="submit" />
+    <button type="submit">Add character</button>
   </form>
 </div>
 <% } %>
