--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,6 +28,6 @@
       <span class="form-text"><%= message %></span>
       <% } %>
     </div>
-    <input type="submit" value="Login" />
+    <button type="submit">Login</button>
   </form>
 </div>
