--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -40,22 +40,22 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <button class="color-select dropdown-item" data-color="light">Light</button>
+              <button name="theme" class="color-select dropdown-item" data-color="light" id="light">Light</button>
             </li>
             <li>
-              <button class="color-select dropdown-item" data-color="dark">Dark</button>
+              <button name="theme"  class="color-select dropdown-item" data-color="dark" id="dark">Dark</button>
             </li>
             <li>
-              <button class="color-select dropdown-item" data-color="blue">Blue</button>
+              <button name="theme"  class="color-select dropdown-item" data-color="blue" id="blue">Blue</button>
             </li>
             <li>
-              <button class="color-select dropdown-item" data-color="purple">Purple</button>
+              <button name="theme"  class="color-select dropdown-item" data-color="purple" id="purple">Purple</button>
             </li>
             <li>
-              <button class="color-select dropdown-item" data-color="green">Green</button>
+              <button name="theme"  class="color-select dropdown-item" data-color="green" id="green">Green</button>
             </li>
             <li>
-              <button class="color-select dropdown-item" data-color="pink">Pink</button>
+              <button name="theme"  class="color-select dropdown-item" data-color="pink" id="pink">Pink</button>
             </li>
           </ul>
         </li>
